Reduce Angular change detection caused by mouse/touch movement. Thinner strokes on arrow buttons for wide spinner. Improved copy icon. Prevent flicker of on-screen keyboard during copy operation. Fix error highlighting for time-only editor. Improve floating palette header background. Tweak palette button layout and sizing.

--- a/projects/tubular-ng-widgets/src/styles.scss
+++ b/projects/tubular-ng-widgets/src/styles.scss
@@ -37,16 +37,17 @@
 
 .tbw-dse-header {
   align-items: center;
-  background: repeating-linear-gradient(0deg, white, #A6A6A6 1px, white 1px, white 3px);
+  background-color: #F4F4F4;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23a6a6a6' fill-opacity='1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
   border: #A6A6A6 solid max(1px, 0.0836em);
-  border-radius: max(4px, 0.2em) max(4px, 0.2em) 0 0;
-  cursor: grab;
+  border-radius: max(4px, 0.2em) max(4px, 0.2em) 0 0;  cursor: grab;
   display: flex;
-  height: 0.8em;
+  height: 0.9em;
   justify-content: flex-end;
   margin: 2px 2px 0 2px;
   overflow: hidden;
   padding-right: 0.25em;
+  position: relative;
   user-select: none;
 }
 
@@ -73,9 +74,11 @@
   border-radius: 0 0 max(4px, 0.2em) max(4px, 0.2em);
   display: flex;
   font-size: max(14px, 0.6em);
+  height: 1.8em;
   justify-content: center;
   margin: 0 2px 2px 2px;
   overflow: hidden;
+  padding: 0 0.25em;
   position: relative;
 
   .tbw-dse-button {
@@ -83,10 +86,13 @@
     border-radius: max(2px, 0.1em);
     box-sizing: border-box;
     cursor: pointer;
+    flex-grow: 1;
     font-family: inherit;
     font-size: max(14px, 0.6em);
-    margin: 0.25em;
-    min-width: 1.33em;
+    line-height: 1.4em;
+    margin: 0.25em 0.1em;
+    max-width: 2.5em;
+    min-width: 1.5em;
     padding: 0.1em 0.25em;
     position: relative;
     text-align: center;
@@ -95,7 +101,7 @@
 
   .tbw-dse-button-spacer {
     flex-shrink: 1;
-    width: 0.33em;
+    width: 0.4em;
   }
 
   input, .tbw-dse-paste-hint {
@@ -213,10 +219,12 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  stroke-width: 34px;
 
   &.tbw-dse-wide-spinner {
     flex-direction: row;
     font-size: 2em;
+    stroke-width: 17px;
 
     svg:first-child {
       margin-right: 0.1em;
@@ -246,7 +254,7 @@
 }
 
 .tbw-dse-bad-value {
-  color: #C00 !important;
+  color: #C00;
   text-decoration: line-through !important;
 }
 
@@ -268,7 +276,7 @@
   }
 
   .tbw-dse-header {
-    background: repeating-linear-gradient(0deg, #333, #A6A6A6 1px, #333 1px, #333 3px);
+    background-color: #333;
     border: #A6A6A6 solid max(1px, 0.0836em);
   }
 
